--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,14 @@
     ],
     "require": {
         "composer/installers": "^2.0",
+        "drupal/admin_toolbar": "^3.4",
+        "drupal/bootstrap_sass": "^5.0",
         "drupal/core-composer-scaffold": "^10.1",
         "drupal/core-project-message": "^10.1",
         "drupal/core-recommended": "^10.1",
         "drupal/devel": "^5.1",
+        "drupal/twig_vardumper": "^3.1",
+        "drupal/unique_content_field_validation": "^1.1",
         "drush/drush": "^12.2"
     },
     "conflict": {
