--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,13 @@
         "composer/installers": "^2.0",
         "drupal/admin_toolbar": "^3.4",
         "drupal/bootstrap_sass": "^5.0",
+        "drupal/coder": "^8.3",
         "drupal/core-composer-scaffold": "^10.1",
         "drupal/core-project-message": "^10.1",
         "drupal/core-recommended": "^10.1",
         "drupal/devel": "^5.1",
+        "drupal/hook_event_dispatcher": "^4.0@RC",
+        "drupal/twig_tweak": "^3.2",
         "drupal/twig_vardumper": "^3.1",
         "drupal/unique_content_field_validation": "^1.1",
         "drush/drush": "^12.2"
@@ -38,6 +41,7 @@
             "drupal/core-project-message": true,
             "phpstan/extension-installer": true,
             "dealerdirect/phpcodesniffer-composer-installer": true
+            
         },
         "sort-packages": true
     },
@@ -97,5 +101,8 @@
                 "      composer remove drupal/core-project-message"
             ]
         }
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "*"
     }
 }
