--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,9 @@
         "drupal/core-project-message": "^10.1",
         "drupal/core-recommended": "^10.1",
         "drupal/devel": "^5.1",
+        "drupal/devel_php": "^1.5",
+        "drupal/entity_events": "^2.0",
+        "drupal/entity_redirect": "^2.2",
         "drupal/hook_event_dispatcher": "^4.0@RC",
         "drupal/twig_tweak": "^3.2",
         "drupal/twig_vardumper": "^3.1",
