--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "drupal/entity_events": "^2.0",
         "drupal/entity_redirect": "^2.2",
         "drupal/hook_event_dispatcher": "^4.0@RC",
+        "drupal/restui": "^1.21",
         "drupal/twig_tweak": "^3.2",
         "drupal/twig_vardumper": "^3.1",
         "drupal/unique_content_field_validation": "^1.1",
